compiler/weave_syntax/tests/data/syntax/Namespace.error
error: Expected '[token:identifier]'
        --> <source>:107:13
         |
     107 |             );
         |             ^
